--- a/index.html
+++ b/index.html
@@ -19,10 +19,21 @@
 </head>
 
 <body>
+  <header class="bg-warning bg-gradient shadow mb-5 d-flex justify-content-between align-items-center">
+    <h1 class="p-3">YDD Minato</h1>
+    <button onclick="gioco()" class="px-5 mx-3 h-75">Gioca!</button>
+  </header>
+  <main>
+    <div id="areaGioco" class="container">
+
+    </div>
 
 
 
-  
+  </main>
+
+
+
 
   <script src="./assets/javascript/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
