JS: Funzione genera div con classe gridBox

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button onclick="gioco()" class="px-5 mx-3 h-75">Gioca!</button>
   </header>
   <main>
-    <div id="areaGioco" class="container">
+    <div id="areaGioco" class="containerAreaGioco d-flex flex-wrap">
 
     </div>
 
