fix struttura HTML

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 </head>
 
 <body>
-  <header class="bg-warning bg-gradient shadow mb-5 d-flex justify-content-between align-items-center">
+  <header class="bg-warning bg-gradient shadow d-flex justify-content-between align-items-center">
     <h1 class="p-3">YDD Minato</h1>
     <button onclick="gioco()" class="px-5 mx-3 h-75">Gioca!</button>
   </header>
   <main>
-    <div id="areaGioco" class="containerAreaGioco d-flex flex-wrap">
+    <div id="areaGioco" class="containerAreaGioco d-flex flex-wrap pt-5">
 
     </div>
 
@@ -32,6 +32,9 @@
 
   </main>
 
+  <footer>
+    Made with &hearts; by YDD
+  </footer>
 
 
 
