--- a/index.html
+++ b/index.html
@@ -20,8 +20,19 @@
 
 <body>
   <header class="bg-warning bg-gradient shadow d-flex justify-content-between align-items-center">
-    <h1 class="p-3">YDD Minato</h1>
-    <button onclick="gioco()" class="px-5 mx-3 h-75">Gioca!</button>
+    <div>
+      <h1 class="p-3">YDD Minato</h1>
+    </div>
+    <div class="d-flex">
+      <button onclick="refresh()" class="px-5 mx-3 h-75">Reset</button>
+      <select id="selezioneDifficolta">
+        <option value=""></option>
+        <option value="1">Easy</option>
+        <option value="2">Normal</option>
+        <option value="3">Hard</option>
+      </select>
+      <button onclick="gioco()" class="px-5 mx-3 h-75">Gioca!</button>
+    </div>
   </header>
   <main>
     <div id="areaGioco" class="containerAreaGioco d-flex flex-wrap pt-5">
