--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>YDD - Campo Minato</title>
   <!-- [______Collegamento Bootstrap__________________________________________] -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!-- [______Collegamento Font__________________________________________] -->
   <script src="https://kit.fontawesome.com/f4affba74f.js" crossorigin="anonymous"></script>
   <!-- [______Collegamento CSS_____________________________________________] -->
@@ -15,7 +16,7 @@
   <link rel="stylesheet" href="./assets/css/flex.css">
   <!-- [______Favicon______________________________________________________] -->
   <link rel="icon" type="image/x-icon" href="./assets/img/favYconStatic.ico">
-  
+
 </head>
 
 <body>
@@ -24,14 +25,16 @@
       <h1 class="p-3">YDD Minato</h1>
     </div>
     <div class="d-flex">
-      <button onclick="refresh()" class="px-5 mx-3 h-75">Reset</button>
-      <select id="selezioneDifficolta">
-        <option value=""></option>
-        <option value="1">Easy</option>
-        <option value="2">Normal</option>
-        <option value="3">Hard</option>
-      </select>
-      <button onclick="gioco()" class="px-5 mx-3 h-75">Gioca!</button>
+      <form>
+        <button onclick="refresh()" class="p-2 mx-3">Reset</button>
+        <select id="selezioneDifficolta">
+          <option value=""></option>
+          <option value=1>Easy</option>
+          <option value=2>Normal</option>
+          <option value=3>Hard</option>
+        </select>
+        <button onclick="gioco(); return false" class="p-2 mx-3">Gioca!</button>
+      </form>
     </div>
   </header>
   <main>
@@ -50,7 +53,9 @@
 
 
   <script src="./assets/javascript/main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
