--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </div>
     <div class="d-flex">
       <form>
-        <button onclick="refresh()" class="p-2 mx-3">Reset</button>
-        <select id="selezioneDifficolta">
-          <option value=""></option>
-          <option value=1>Easy</option>
-          <option value=2>Normal</option>
-          <option value=3>Hard</option>
+        <button onclick="refresh()" class="btnHeight p-2 mx-3">Reset</button>
+        <select id="selezioneDifficolta" class="btnHeight border border-2 border-dark">
+            <option value=""></option>
+            <option value=1>Easy</option>
+            <option value=2>Normal</option>
+            <option value=3>Hard</option>
         </select>
-        <button onclick="gioco(); return false" class="p-2 mx-3">Gioca!</button>
+        <button onclick="gioco(); return false" class="btnHeight p-2 mx-3">Gioca!</button>
       </form>
     </div>
   </header>
