--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <div class="d-flex">
       <form>
         <button onclick="refresh()" class="btnHeight p-2 mx-3">Reset</button>
-        <select id="selezioneDifficolta" class="btnHeight border border-2 border-dark">
-            <option value=""></option>
+        <select onclick="gioco(); return false" id="selezioneDifficolta" class="btnHeight border border-2 border-dark me-3">
+            <option value="" id="selezioneDifficoltaVuota"></option>
             <option value=1>Easy</option>
             <option value=2>Normal</option>
             <option value=3>Hard</option>
         </select>
-        <button onclick="gioco(); return false" class="btnHeight p-2 mx-3">Gioca!</button>
+        <!-- <button onclick="gioco(); return false" class="btnHeight p-2 mx-3">Gioca!</button> -->
       </form>
     </div>
   </header>
