HTML: Difficoltà al posto di "" nella select :)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <form>
         <button onclick="refresh()" class="btnHeight p-2 mx-3">Reset</button>
         <select onclick="gioco(); return false" id="selezioneDifficolta" class="btnHeight border border-2 border-dark me-3">
-            <option value="" id="selezioneDifficoltaVuota"></option>
+            <option value="" id="selezioneDifficoltaVuota">Difficoltà</option>
             <option value=1>Easy</option>
             <option value=2>Normal</option>
             <option value=3>Hard</option>
